<resources>
    <string name="app_name">MediFriend</string>
    <string name="Sign_Out_Button">Sign Out</string>
    <string name="Symptoms_Button">Check Symptoms</string>
    <string name="Conditions_Button">Check Conditions</string>
    <string name="Scan_Button">Cancer Scanner</string>
    <string name="First_Aid_Button">First Aid</string>
    <string name="Reminder_Button">Reminders</string>
    <string name="Reports_Button">Manage Reports</string>
    <string name="Reminder_Text">Keep yourself and loved ones safe and never forget to take your medications again.</string>
    <string name="Alarm_button_text">Today\'s Reminders</string>
    <string name="Reminders_button_text">My Reminders</string>
    <string name="Add_button_text">Add Reminders</string>
    <string name="from_date">From Date</string>
    <string name="pref_enable_Vibration_key" translatable="false">enable_Vibration</string>
    <string name="pref_enable_Vibration_label">Enable Vibration</string>
    <string name="pref_enable_Vibration_true">Enabled</string>
    <string name="pref_enable_Vibration_false">Not Enabled</string>
    <string name="pref_enable_Vibration_default" translatable="false">true</string>
    <string name="Delete_Reports_button_text">Delete Reports</string>
    <string name="Reports_button_text">Show Reports</string>
    <string name="Add_Reports_button_text">Add Reports</string>
    <string name="Choose_File_Button">Choose File</string>
    <string name="Choose_File_Hint">Enter file name</string>
    <string name="Show_Uploads_Textview">Show Uploads</string>
    <string name="symptom">Symptoms</string>
    <string name="hospital">Hospital details</string>
    <string name="about">About</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="symptom_header">Check yourself\nBefore you wreck yourself</string>
    <string-array name="body_parts">
        <item>Concerned body area</item>
        <item>Head area</item>
        <item>Chest area</item>
        <item>Abdomen</item>
        <item>Back area</item>
        <item>Pelvic area</item>
        <item>Arm</item>
        <item>Legs</item>
    </string-array>
    <string-array name="head_area">
        <item>Select body part from head area</item>
        <item>Head</item>
        <item>Eyes</item>
        <item>Nose</item>
        <item>Face</item>
        <item>Ears</item>
        <item>Mouth</item>
        <item>Jaw</item>
        <item>Neck</item>
    </string-array>
    <string-array name="chest_area">
        <item>Select body part from chest area</item>
        <item>Chest</item>
        <item>Side of chest</item>
        <item>Sternum</item>
    </string-array>
    <string-array name="abdomen">
        <item>Select body part from abdomen</item>
        <item>Upper abdomen</item>
        <item>Lower abdomen</item>
    </string-array>
    <string-array name="back_area">
        <item>Select body part from back area</item>
        <item>Back</item>
        <item>Upper spine</item>
        <item>Lower spine</item>
    </string-array>
    <string-array name="pelvic">
        <item>Select body part from pelvic area</item>
        <item>Pelvis</item>
        <item>Genitals</item>
        <item>Buttock</item>
        <item>Hip</item>
        <item>Groin</item>
    </string-array>
    <string-array name="arm">
        <item>Select body part from arm</item>
        <item>Shoulder</item>
        <item>Armpit</item>
        <item>Upper arm</item>
        <item>Elbow</item>
        <item>Fore arm</item>
        <item>Wrist</item>
        <item>Hand</item>
        <item>Fingers</item>
    </string-array>
    <string-array name="legs">
        <item>Select body part from legs</item>
        <item>Thigh</item>
        <item>Hamstring</item>
        <item>Knee</item>
        <item>Back of knee</item>
        <item>Shin</item>
        <item>Calf</item>
        <item>Ankle</item>
        <item>Foot</item>
        <item>Toes</item>
        <item>Sole</item>
    </string-array>
    <string name="first_aid_info">First aid info</string>
  <string name="about_the_app">About the App</string>
    <string name="about_the_app_details">
        MediFriend is a medical app designed to fulfil all your medical needs.
        \n\nThis app packs the following features:
        \n\t\t•\tSymptom checker
        \n\t\t•\tConditions checker
        \n\t\t•\tFirst aid information
        \n\t\t•\tReports Storage
        \n\t\t•\tMedicine reminders
        \n\t\t•\tCancer Scanners
        \n\t\t•\tEmergency Services
        \n\t\t•\tMedical News
        \n\t\t•\tNearest Hospitals Locator
    </string>
    <string name="symptom_checker">Symptom Checker</string>
    <string name="symptom_checker_details">Check symptoms and view possible conditions by choosing your concerned body part.</string>
    <string name="first_aid_info_details">Get all the first aid information you need, right under your fingertips.</string>
    <string name="find_nearby_hospitals_details">Find the registered hospitals within 10 Km (6 miles) around you.
        \n\nClick on a Marker to view the hospital\'s details, such as the phone number, address, location and website</string>
    <string name="call_emergency_services_details">Call your national Emergency number in one click,
        wherever you see the circular call button with a cross inside.</string>
    <string name="call_emergency_services">Call Emergency services</string>
    <string name="find_nearby_hospitals">Find nearby hospitals</string>
    <string name="conditions_info_details">Choose a condition and view all the possible symptoms associated with that condition.</string>
    <string name="conditions_info">Conditions Info</string>
</resources>