<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    android:id="@+id/about_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    tools:context=".Home"
    tools:ignore="Overdraw">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/app_name"
            android:textColor="@color/colorSecondaryText" />
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="25dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_white_default">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/about_the_app"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/about_the_app_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="25dp"

            android:background="@drawable/button_white_default">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/symptom_checker"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/symptom_checker_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/first_aid_info"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/first_aid_info_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/conditions_info"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/conditions_info_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/button_white_default">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:drawableEnd="@drawable/ic_call_emergency_services_about"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/call_emergency_services"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/call_emergency_services_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="Store Reports"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="Store all your Medical Reports in a central which is securely stored on the cloud and can be viewed anytime and is also protected with your fingerprint."
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/find_nearby_hospitals"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/find_nearby_hospitals_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="Add Medicine Reminders"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="Add reminders about your medicines and get reminded which medicine should be taken when."
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="Cancer Scanner"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="Scan your MRIs to get a second opinion on Malignant Cancers."
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="Medical News"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="Get access to the latest medical news right at your fingertips."
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>